--- a/style.css
+++ b/style.css
@@ -2,10 +2,14 @@ body, html {
   padding: 0;
   margin: 0;
   height: 100%;
-  display: flex;
-  justify-content: center;
   background-color:#d3d3d3;
   font-family: 'Libre Baskerville', serif;
+}
+
+main {
+  display: grid;
+  place-items: center;
+  height: 100%;
 }
 
 h1 {
@@ -20,32 +24,38 @@ img {
   box-shadow: 5px -1px 20px;
 }
 
-#quizWrapper {
-  position: relative;
-  margin-top: 150%;
-  display: flex;
-  justify-content: center;
+button {
+  cursor: pointer;
 }
 
-#imageWrapper {
+.quizWrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin-top: -150px;
+}
+
+.imageWrapper {
   width: 80%;
   margin: auto;
 }
 
-#resultBtn {
+.resultBtn {
   height: 30px;
-  margin-top: 10px;
   margin-left: 10px;
   border-radius: 8px;
 }
 
-#finalResult {
-  margin-top: 20px;
+.finalResult {
+  position: absolute;
+  top: 150%;
   text-align: center;
+  width: 100%;
+  font-weight: bold;
 }
 
 
-#score {
+.score {
   font-size: 25px;
   color: green;
   justify-content: left;
@@ -62,7 +72,7 @@ img {
   display: none;
 }
 
-#buttons {
+.buttons {
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -70,21 +80,18 @@ img {
   margin: auto;
 }
 
-#startQuiz {
+.startQuiz {
   position: relative;
   margin-top: 150%;
   width: 200px;
   height: 40px;
-  justify-content: center;
   text-align: center;
   font-weight: bold;
   border-radius: 8px;
 }
 
-#restartQuiz {
+.restartQuiz {
   position: relative;
-  justify-content: center;
-  margin-top: 150%;
   width: 200px;
   height: 40px;
   background-color: green;
@@ -113,7 +120,7 @@ img {
 
 
 @media only screen and (min-width: 520px) {
-  #buttons {
+  .buttons {
     width: 100%;
     flex-direction: row;
     flex-wrap: wrap;
@@ -124,7 +131,7 @@ img {
     border-radius: 250px;
   }
 
-  #resultBtn {
+  .resultBtn {
     height: 40px;
     width: 100px;
     font-weight: bold;
@@ -136,7 +143,7 @@ img {
     font-weight: bold;
   }
 
-  #finalResult {
+  .finalResult {
     font-size: 20px;
     font-weight: bold;
   }
