--- a/style.css
+++ b/style.css
@@ -32,11 +32,11 @@ button {
   position: relative;
   display: flex;
   justify-content: center;
-  margin-top: -150px;
 }
 
 .imageWrapper {
-  width: 80%;
+  width: 350px;
+  height: 350px;
   margin: auto;
 }
 
@@ -82,7 +82,6 @@ button {
 
 .startQuiz {
   position: relative;
-  margin-top: 150%;
   width: 200px;
   height: 40px;
   text-align: center;
@@ -146,5 +145,9 @@ button {
   .finalResult {
     font-size: 20px;
     font-weight: bold;
+  }
+
+  .quizWrapper {
+    margin-top: -150px;
   }
 }
